20. Final Mega Capstone Project/projects/02-java-banking-microservices/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking
  namespace: banking-java
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "15"
spec:
  ingressClassName: nginx
  rules:
    - host: banking.local.example
      http:
        paths:
          - path: /health
            pathType: Exact
            backend: { service: { name: banking-gateway, port: { number: 80 } } }
          - path: /api
            pathType: Prefix
            backend: { service: { name: banking-gateway, port: { number: 80 } } }
          - path: /
            pathType: Prefix
            backend: { service: { name: banking-frontend, port: { number: 80 } } }
